Multiline-Overflow: fix alignment of the labels within table cells when there is a "multiline-overflow" label in a sibling cell. See #79312

--- a/src/scss/themes/fylr/components/_labels.scss
+++ b/src/scss/themes/fylr/components/_labels.scss
@@ -265,6 +265,7 @@ label[data-label-clickable],
 
 	line-height: var(--lh);
 	position: relative;
+	top: -2px; // even out line-height
 
 	&.cui-label--has-overflow-button {
 		> .cui-label-content {
